--- a/index.html
+++ b/index.html
@@ -57,5 +57,19 @@
                 </li>
             </ul>
         </section>
+        <footer class="footer">
+            <img src="img/Logo.png" alt="Alura+" />
+            <ul class="footer-container">
+                <li class="footer-container__item">Idioma</li>
+                <li class="footer-container__item">Dispositivos compatíveis</li>
+                <li class="footer-container__item">Contrato de assinatura</li>
+                <li class="footer-container__item">Politica de privacidade</li>
+                <li class="footer-container__item">Proteção de dados no brasil</li>
+                <li class="footer-container__item">Anuncios personalizados</li>
+                <li class="footer-container__item">Ajuda</li>
+            </ul>
+            <p>® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+            <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+        </footer>
     </body>
 </html>
